feat: add recipes difficulty levels module
